--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Blueprints/NewGameInstance.NewGameInstance_C
 GameDefaultMap=/Game/PermissionsSample.PermissionsSample
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/NewGameMode.NewGameMode_C
@@ -268,4 +268,9 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[OnlineSubsystemOculus]
+bEnabled=true
+OculusAppId=1234
+RiftAppId=[rift app id here]
 
