--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -271,6 +271,6 @@ ManualIPAddress=
 
 [OnlineSubsystemOculus]
 bEnabled=true
-OculusAppId=1234
+OculusAppId=24640471225537334
 RiftAppId=[rift app id here]
 
