--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=Desktop
+TargetedHardwareClass=Mobile
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
@@ -99,7 +99,7 @@ ApplicationDisplayName=
 VersionDisplayName=1.0
 MinSDKVersion=32
 TargetSDKVersion=32
-InstallLocation=InternalOnly
+InstallLocation=Auto
 bEnableLint=False
 bPackageDataInsideApk=False
 bCreateAllPlatformsInstall=False
@@ -135,9 +135,9 @@ bAndroidVoiceEnabled=True
 bEnableMulticastSupport=False
 bPackageForMetaQuest=True
 bRemoveOSIG=False
-KeyStore=
-KeyAlias=
-KeyStorePassword=
+KeyStore=ExampleKey.keystore
+KeyAlias=MyKey
+KeyStorePassword=xxxxxxxx
 KeyPassword=
 bBuildForArm64=True
 bBuildForX8664=False
