--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,8 @@
 ProjectID=CE85EDEF40804521016F21B0430E5860
 bStartInVR=True
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+ForDistribution=True
+FullRebuild=True
+
